The Overmind prototype can now render predefined scenes.

--- a/Prototypes/Overmind/index.html
+++ b/Prototypes/Overmind/index.html
@@ -13,7 +13,7 @@
                 background-color: lightsalmon;
             }
         </style>
-        <script src="http://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+        <script src="thirdparty/require.js"></script>
         <script src="build/Overmind.js"></script>
     </head>
     <body>
