Units are now owned by players.
* each unit knows which player owns him
* units of different players have different borders
* updated the UI to show the player name and color.

--- a/Prototypes/Overmind/index.html
+++ b/Prototypes/Overmind/index.html
@@ -8,6 +8,12 @@
     </head>
     <body>
         <main id="ui">
+            <section id="player-info">
+                <div class="player-name">
+                    {{humanPlayer.name}}
+                </div>
+                <div class="player-flag" v-bind:style="{ backgroundColor: humanPlayer.flag }"></div>
+            </section>
             <section id="resource-panel">
                 <div class="ui-item-info" v-for="resource in resources">
                     <div class="ui-item-icon" v-bind:style="{ backgroundImage: 'url(' + resource.image + ')' }">
