--- a/Prototypes/Overmind/index.html
+++ b/Prototypes/Overmind/index.html
@@ -39,7 +39,8 @@
                     </div>
                 </div>
             </section>
-            <h1>Display Options</h1>
+            <div class="display-options-wrapper">
+            <h3>Display Options</h3>
             <label class="container">enableBrushesABBA
                 <input type="checkbox" v-model="displayOption.enableBrushesABBA">
                 <span class="checkmark"></span>
@@ -60,6 +61,7 @@
                 <input type="checkbox" v-model="displayOption.hideUrbanAreas">
                 <span class="checkmark"></span>
             </label>
+            </div>
         </main>
         <canvas></canvas>
     </body>
